updated build scripts